# Raspberry

./: .gitigore  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  main  main.c
.deps/: main.Po
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
usr_math/: .configure.ac.swp  Makefile  Makefile.am  Makefile.in  usr_math.c  usr_math.h
usr_math/.deps/: usr_math.Po
